plrustc/plrustc/uitests/tuple_struct_self_pat_box.stderr
error[E0603]: tuple struct constructor `std::boxed::Box` is private
  --> $DIR/tuple_struct_self_pat_box.rs:10:13
   |
LL |         let Self(ptr, _) = self;
   |             ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
